--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -165,3 +165,16 @@ textarea {
 .navigointi a:hover {
   background-color: #ddd; /* Voit muuttaa hover-efektin värin */
 }
+
+.info {
+  background-color: #e5e5e5;
+  border: 1px solid #999;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  margin: 1rem;
+  text-align: center;
+}
+
+.info a {
+  color: #975579;
+}
